🚚 Rename pages title

--- a/src/app/views/private-access/recipe/create.njk
+++ b/src/app/views/private-access/recipe/create.njk
@@ -1,7 +1,7 @@
 {% extends "private-access/layout.njk" %}
 
 {% block head %}
-    <title>Create</title>
+    <title>Cadastrar receita</title>
     <link rel="stylesheet" href="/styles/private-access/recipe/create.css">
 {% endblock head %}
 
