--- a/src/app/views/private-access/chef/edit.njk
+++ b/src/app/views/private-access/chef/edit.njk
@@ -1,7 +1,7 @@
 {% extends "private-access/layout.njk" %}
 
 {% block head %}
-    <title>Edit</title>
+    <title>Atualizar chef</title>
     <link rel="stylesheet" href="/styles/private-access/chef/edit.css">
 {% endblock head %}
 
