🛂 Work with validations

--- a/src/app/views/private-access/user/edit.njk
+++ b/src/app/views/private-access/user/edit.njk
@@ -40,7 +40,7 @@
                 <div class="item">
                     <p>Senha</p>
                     <div class="input">
-                        <input type="password" name="password" value="{{user.password}}">
+                        <input type="password" name="password" value="{{user.password}}" required="required">
                     </div>
                 </div>
             {% endif %}
