--- a/public/styles/private-access/chef/create.css
+++ b/public/styles/private-access/chef/create.css
@@ -158,6 +158,7 @@ header .login-logout {
   color: #111111;
   opacity: 100%;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .recipe div input,
@@ -219,72 +220,34 @@ textarea {
   margin-bottom: 15px;
 }
 
-#photos-upload {
+.photos-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 20px !important;
+}
+
+.photos-container #photos-upload {
   margin: 0;
 }
 
-.recipe .image div {
-  margin-top: 10px;
-}
-
-.recipe .image .manager {
-  display: grid;
-  grid-template-columns: 150px 1fr;
-  gap: 10px;
-}
-
-.recipe .image #photos-upload {
-  position: relative;
-  display: flex;
-  overflow: hidden;
-  height: 150px;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #dddddd;
-  border-radius: 3.5px;
-}
-
-.recipe .image #photos-upload i {
-  position: absolute;
-  color: #999999;
-  width: 28px;
-  height: 28px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  font-size: 40px;
-}
-
-.recipe .image #photos-input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.recipe .image #photos-preview {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  width: 100%;
+.photos-container #photos-preview {
   margin: 0;
-}
-
-.recipe .image #photos-preview img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
+  display: flex;
 }
 
 #photos-preview .photo {
   position: relative;
   margin: 0;
+  width: 120px;
+  height: 120px;
+  margin-right: 16px;
+}
+
+#photos-preview .photo img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
 }
 
 #photos-preview .photo i {
@@ -308,16 +271,16 @@ textarea {
   opacity: 1;
 }
 
-.recipe .image-chef #photos-upload {
+.recipe .image-chef .photos-container #photos-upload {
   position: relative;
   display: block;
   overflow: hidden;
   width: 140px;
-  margin-top: 10px;
   cursor: pointer;
+  margin-bottom: 16px;
 }
 
-.recipe .image-chef #photos-upload p {
+.recipe .image-chef .photos-container #photos-upload p {
   background-color: #6558c3;
   color: white;
   font-size: 16px;
@@ -329,7 +292,7 @@ textarea {
   cursor: pointer;
 }
 
-.recipe .image-chef #photos-input {
+.recipe .image-chef .photos-container #photos-input {
   position: absolute;
   top: 0;
   left: 0;
