--- a/src/app/views/private-access/chef/create.njk
+++ b/src/app/views/private-access/chef/create.njk
@@ -22,19 +22,25 @@
         <div class="image-chef">
             <h3>Avatar</h3>
 
-            <div id="photos-upload">
-                <p>Enviar avatar</p>
-                <input 
-                    type="file" 
-                    name="photos" 
-                    id="photos-input" 
-                    required
-                    multiple="multiple" 
-                    accept="image/*" 
-                    onchange="PhotosUpload.handleFileInput(event)"
-                >
-            </div>
+            <div class="photos-container">
+                <div id="photos-upload">
+                    <p>Enviar avatar</p>
+                    
+                    <input 
+                        type="file" 
+                        name="photos" 
+                        id="photos-input" 
+                        required
+                        multiple="multiple" 
+                        accept="image/*" 
+                        onchange="PhotosUpload.handleFileInput(event)"
+                    >
+                </div>
 
+                <div id="photos-preview">
+
+                </div>
+            </div>
         </div>
 
     </form>
